--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -6,11 +6,13 @@
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
 	<a href="{% url 'my-orders' %}">My Orders</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'order-id' %}" class="active">#454545454545</a>
+	<a href="{% url 'order-id' %}">#454545454545</a>
+	<span class="separator"><i class="fa fa-angle-right"></i></span>
+	<a href="{% url 'order-id-edit' %}" class="active">edit</a>
 </div>
 {% endblock %}
 
-{% block sidebar_account %}
+{% block sidebar_right %}
 <!-- BEGIN RIGHT SIDEBAR LAYOUT -->
 <div id="layout-right" class="col-md-3 col-sm-12">
 	<section class="sibebar-section">
@@ -46,123 +48,183 @@
 	<div class="tab-content">
 		<!-- Begin Details Tab -->
 		<div class="tab-pane active" id="details">
-			<div class="table-responsive">
-				<table class="table table-striped">
-					<tbody>
-						<tr>
-							<th width="155px">Order</th>
-							<td>4545454545</td>
-						</tr>
+			<form class="form-horizontal edit-order" role="form">
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Order</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="4545454545">
+					</div>
+				</div>
 
-						<tr>
-							<th>Topic</th>
-							<td>sgsdgjosddgj</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Topic</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="sgsdgjosddgj">
+					</div>
+				</div>
 
-						<tr>
-							<th>Type of assignment</th>
-							<td>Dissertation chapter - Introduction</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Type of assignment</label>
+					<div class="col-md-9 col-sm-9">
+						<select class="form-control">
+							<option selected>Dissertation chapter - Introduction</option>
+							<option>option 1</option>
+							<option>option 2</option>
+						</select>
+					</div>
+				</div>
 
-						<tr>
-							<th>Urgency</th>
-							<td>14 days</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Urgency</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="14 days">
+					</div>
+				</div>
 
-						<tr>
-							<th>Writer level</th>
-							<td>Master's</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Writer level</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="Master's">
+					</div>
+				</div>
 
-						<tr>
-							<th>Style</th>
-							<td>APA</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Style</label>
+					<div class="col-md-9 col-sm-9">
+						<select class="form-control">
+							<option selected>APA</option>
+							<option>option 1</option>
+							<option>option 2</option>
+						</select>
+					</div>
+				</div>
 
-						<tr>
-							<th>Sources</th>
-							<td>5</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Sources</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="5">
+					</div>
+				</div>
 
-						<tr>
-							<th>Language</th>
-							<td>English</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Language</label>
+					<div class="col-md-9 col-sm-9">
+						<select class="form-control">
+							<option selected>English</option>
+							<option>option 1</option>
+							<option>option 2</option>
+						</select>
+					</div>
+				</div>
 
-						<tr>
-							<th>Description</th>
-							<td>jsddfo;sdflkslkflskkfjlksdmklmlsdmf</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Description</label>
+					<div class="col-md-9 col-sm-9">
+						<textarea class="form-control" rows="3">sdflkslkflskkfjlksdmklmlsdmf</textarea>
+					</div>
+				</div>
 
-						<tr>
-							<th>Added</th>
-							<td>2014.06.26 12:26</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Added</label>
+					<div class="col-md-9 col-sm-9">
+						<div class='date datetimepicker'>
+							<input type='text' class="form-control" />
+							<i class="fa fa-calendar"></i>
+						</div>
+					</div>
+				</div>
 
-						<tr>
-							<th>Delivery</th>
-							<td>2014.07.10 12:16 
-								{% comment %}
-								// Тимчасово відсутня функція
-								<a href="#" class="btn-extend" data-toggle="modal" data-target="#modalExtend">
-									<span class="fa-stack">
-										<i class="fa fa-circle-thin fa-stack-2x"></i>
-										<i class="fa fa-plus fa-stack-1x"></i>
-									</span>
-									Extend
-								</a>
-								{% endcomment %}
-							</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Delivery</label>
+					<div class="col-md-9 col-sm-9">
+						<div class='date datetimepicker'>
+							<input type='text' class="form-control" />
+							<i class="fa fa-calendar"></i>
+						</div>
+					</div>
+				</div>
 
-						<tr>
-							<th>Spacing</th>
-							<td>Single spaced</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Spacing</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="Single spaced">
+					</div>
+				</div>
 
-						<tr>
-							<th>Page price</th>
-							<td>56$</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Page price</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="56$">
+					</div>
+				</div>
 
-						<tr>
-							<th>Pages</th>
-							<td>6</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Pages</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="6">
+					</div>
+				</div>
 
-						<tr>
-							<th>Additional services</th>
-							<td>5</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Additional services</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="5">
+					</div>
+				</div>
 
-						<tr>
-							<th>Discount</th>
-							<td>0%</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Discount</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="0%">
+					</div>
+				</div>
 
-						<tr>
-							<th>Price</th>
-							<td>356$</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Price</label>
+					<div class="col-md-9 col-sm-9">
+						<input type="text" class="form-control" value="356$">
+					</div>
+				</div>
 
-						<tr>
-							<th>Payment details</th>
-							<td>&nbsp;</td>
-						</tr>
+				<div class="form-group">
+					<label class="col-md-3 col-sm-3 control-label">Payment details</label>
+					<div class="col-md-9 col-sm-9">
+						
+					</div>
+				</div>
 
-						<tr>
-							<th>Writer ID</th>
-							<td>&nbsp;</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="form-group writer-id">
+					<label class="col-md-3 col-sm-3 control-label">Writer ID</label>
+					<div class="col-md-9 col-sm-9">
+						
+					</div>
+				</div>
+
+				<div class="row text-left order-actions">
+					<a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
+					<a href="#" class="btn btn-default">Back</a>
+					<a href="#" class="btn btn-primary">Save changes</a>  									
+				</div>
+			</form>
+
+			<!-- begin Delete modal-->
+			<div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-md">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">
+								<span aria-hidden="true"></span><span class="sr-only">Close</span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+							<button type="button" class="btn btn-primary">Delete</button>
+					</div>
+					</div>
+				</div>
 			</div>
-
-			<div class="row text-center order-actions">
-				<a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
-				<a href="{% url 'order-id-edit' %}" class="btn btn-default">Edit</a>
-				<a href="{% url 'payment-id' %}" class="btn btn-primary">Pay now (356$)</a>  									
-			</div>
+			<!-- end Delete modal-->
 
 		</div><!-- End Details Tab -->
 
@@ -195,13 +257,13 @@
 					<tbody>
 						<tr>
 							<td>05.01.2011</td>
-							<td><a href="#">546456.rtf</a></td>
+							<td>546456.rtf</td>
 							<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique egestas tortor ut euismod. Curabitur quis sem consectetur</td>
 						</tr>
 
 						<tr>
 							<td>05.01.2011</td>
-							<td><a href="#">546456.rtf</a></td>
+							<td>546456.rtf</td>
 							<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique egestas tortor ut euismod. Curabitur quis sem consectetur</td>
 						</tr>
 					</tbody>
@@ -249,17 +311,6 @@
 						<div class="message-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</div>
 					</div>
 				</div>
-
-				<div class="row message-support">
-					<div class="col-md-10 col-sm-10 col-xs-10 message">
-						<div class="message-time">Support am at 22:20</div>
-						<div class="message-subj">Re: Hi</div>
-						<div class="message-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</div>
-					</div>
-					<div class="col-md-2 col-sm-2 col-xs-2">
-						<div class="user-avatar"><img src="images/thumb-support-default.png" alt=""></div>
-					</div>
-				</div>
 			</div>
 
 			<div class="row message-reply-form">
@@ -297,6 +348,9 @@
 	<!--END TABS-->
 
 	<!-- BEGIN MODALS -->
+	
+	{% comment %}
+	Ми цей функціонал ще неалізований
 	<!-- begin Extend modal-->
 	<div class="modal fade order-modal" id="modalExtend" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-md">
@@ -328,6 +382,7 @@
 		</div>
 	</div>
 	<!-- end Extend modal-->
+	{% endcomment %}
 	
 	<!-- begin Delete modal-->
 	<div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -341,7 +396,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<button type="button" data-toggle="modal" data-target="#modalDeleteSuccess" class="btn btn-primary">Delete</button>
+					<button type="button" class="btn btn-primary">Delete</button>
 			</div>
 			</div>
 		</div>
@@ -360,15 +415,15 @@
 				<div class="modal-body">
 					<form class="form-horizontal">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">File input</label>
+							<label class="col-sm-4 control-label">File input</label>
 							<div class="col-sm-8">
 								<input type="file" class="form-control">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Comment</label>
+							<label class="col-sm-4 control-label">Comment</label>
 							<div class="col-sm-8">
-								<textarea class="form-control"></textarea>
+								<textarea class="form-control" rows="3"></textarea>
 							</div>
 						</div>
 						<div class="submit-group">
@@ -380,10 +435,10 @@
 			</div>
 		</div>
 	</div>
-	<!-- end Upload File modal-->
-
+	<!-- end Delete modal-->
+	
 	<!-- begin Upload Success modal-->
-	<div class="modal fade order-modal notification-modal" id="modalUploadSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal fade order-modal" id="modalUploadSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-md">
 			<div class="modal-content">
 				<div class="modal-body">File uploaded successfull</div>
@@ -391,16 +446,6 @@
 		</div>
 	</div>
 	<!-- end Upload Success modal-->
-
-	<!-- begin Delete Success modal-->
-	<div class="modal fade order-modal notification-modal" id="modalDeleteSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-md">
-			<div class="modal-content">
-				<div class="modal-body">File deleted successfull</div>
-			</div>
-		</div>
-	</div>
-	<!-- end Delete Success modal-->
 	<!-- END MODALS -->
 </div>
 <!-- END MIDDLE LAYOUT -->
