--- a/templates/pages/password-change.html
+++ b/templates/pages/password-change.html
@@ -8,7 +8,7 @@
 </div>
 {% endblock %}
 
-{% block sidebar_account %}
+{% block sidebar_right %}
 <!-- BEGIN RIGHT SIDEBAR LAYOUT -->
 <div id="layout-right" class="col-md-3 col-sm-12">
 	<section class="sibebar-section">
