Fixed some minor fields

--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -87,13 +87,13 @@
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password" required class="form-control" value="{{form.password.value|default:''}}">
+         <input type="password" name="password" required class="form-control" value="">
         </div>
        </div>
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password2" required class="form-control" value="{{form.password2.value|default:''}}">
+         <input type="password" name="password2" required class="form-control" value="">
 		 {# TODO: Перевірки на к-ть символів (мін. 4 символів) #}
          {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
         </div>
