--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -30,7 +30,7 @@
 
  <h1 class="page-title pull-left">Order ID: {{order.pk}}</h1>
  
- <!--div style="margin-top: 16px; margin-bottom: 24px;"><a href="#" class="btn btn-default pull-right btn-back"><i class="fa fa-angle-left"></i> Back</a></div-->
+ <div style="margin-top: 16px; margin-bottom: 24px;"><a href="javascript:history.back(-1);" class="btn btn-default pull-right btn-back"><i class="fa fa-angle-left"></i> Back</a></div>
 
  <div class="clearfix"></div>
 
@@ -42,6 +42,7 @@
  </ul>
  
  <div class="tab-content">
+
   <!-- Begin Details Tab -->
   <div class="tab-pane active" id="details">
    <div class="table-responsive">
@@ -166,11 +167,12 @@
     <a href="{% url 'order-id-edit' order.pk %}" class="btn btn-default">Edit</a>
     <a href="{% url 'order-id-buy' order.pk %}" class="btn btn-primary">Pay now ({{order.get_price}}$)</a>
    </div>
-
   </div><!-- End Details Tab -->
 
+  
   <!-- Begin Files Tab -->
   <div class="tab-pane" id="files">
+  
    <!-- Begin If no files found CODE -->
    <form action="{% url 'order-upload' order.pk %}" class="form-horizontal">
     <div class="form-group">
@@ -210,11 +212,10 @@
    </div>
    <a class="btn btn-default" data-toggle="modal" data-target="#modalUploadFile">Upload file</a>
    <!-- End If files uploaded -->
-
+   
   </div><!-- End Files Tab -->
 
-
-
+  
   <!-- Begin Messages Tab -->
   <div class="tab-pane" id="messages">
    <div id="messages-list">
@@ -222,10 +223,10 @@
       {% if request.user.pk == msg.mowner.pk %}
       <div class="row message-mine">
        <div class="col-md-2 col-sm-2 col-xs-2">
-        <div>Me</div>
+	<div class="user-avatar"><img src="{{ STATIC_URL }}images/thumb-user-default.jpg" alt=""></div>
        </div>
        <div class="col-md-10 col-sm-10 col-xs-10 message">
-        <div class="message-time">{{msg.created}}</div>
+        <div class="message-time">I am at: {{msg.created}}</div>
         <div class="message-subj">{{msg.title}}</div>
         <div class="message-text">{{msg.body}}</div>
        </div>
@@ -233,12 +234,14 @@
       {% else %}
       <div class="row message-support">
        <div class="col-md-10 col-sm-10 col-xs-10 message">
-        <div class="message-time">{{msg.created}}</div>
+        <div class="message-time">{# OR writer #}Support at: {{msg.created}}</div>
         <div class="message-subj">{{msg.title}}</div>
         <div class="message-text">{{msg.body}}</div>
        </div>
        <div class="col-md-2 col-sm-2 col-xs-2">
         <div>{{msg.mowner.username}}</div>
+		{# OR writer: http://genttech.com/essaycoffee/images/thumb-writter-default.png #}
+		<div class="user-avatar"><img src="{{ STATIC_URL }}images/thumb-support-default.png" alt=""></div>
        </div>
       </div>
       {% endif %}
@@ -248,6 +251,7 @@
    <div class="row message-reply-form">
     <form action="{% url 'order-msg-new' order.pk %}" class="form-horizontal" method="post">
      {% csrf_token %}
+	 
      <div class="form-group">
       <div class="col-md-12 col-sm-12">
        <label class="col-md-2 col-sm-2 col-xs-12 control-label">Send to:</label>
@@ -271,15 +275,16 @@
       <textarea name="body" class="form-control" placeholder="Type a message here..." rows="3"></textarea>
       </div>
      </div>
-
+	 
      <button type="submit" class="btn btn-primary">Submit</button>
-
     </form>
    </div>
   </div><!-- End Messages Tab -->
+  
  </div>
  <!--END TABS-->
 
+ 
  <!-- BEGIN MODALS -->
  <!-- begin Extend modal-->
  <div class="modal fade order-modal" id="modalExtend" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
